force-app/main/default/objects/IF_MG_SFDC_Dummy__c/IF_MG_SFDC_Dummy__c.object-meta.xml
<CustomObject>
    <label>IF_MG_SFDC_Dummy</label>
    <nameField>
        <displayFormat>MG_SFDC-{0000000000}</displayFormat>
        <label>IF_MG_SFDC_Dummy 이름</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IF_MG_SFDC_Dummy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>