force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/Channel_v2__c.field-meta.xml
<CustomField>
    <fullName>Channel_v2__c</fullName>
    <label>Channel_v2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>