force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/ErrorContent__c.field-meta.xml
<CustomField>
    <fullName>ErrorContent__c</fullName>
    <label>Error Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>