force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/Ext_Ref__c.field-meta.xml
<CustomField>
    <fullName>Ext_Ref__c</fullName>
    <label>Ext_Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>