force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/IsProcess__c.field-meta.xml
<CustomField>
    <fullName>IsProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProcess</label>
    <type>Checkbox</type>
</CustomField>