force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/Parentcodentify__c.field-meta.xml
<CustomField>
    <fullName>Parentcodentify__c</fullName>
    <label>Parentcodentify</label>
    <length>20</length>
    <type>Text</type>
</CustomField>