force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/ReplacementCountry__c.field-meta.xml
<CustomField>
    <fullName>ReplacementCountry__c</fullName>
    <label>ReplacementCountry</label>
    <length>5</length>
    <type>Text</type>
</CustomField>