force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/ReplacementDate__c.field-meta.xml
<CustomField>
    <fullName>ReplacementDate__c</fullName>
    <label>ReplacementDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>