force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/requestId__c.field-meta.xml
<CustomField>
    <fullName>requestId__c</fullName>
    <label>requestId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>