force-app/main/default/objects/IF_MG_SFDC_Dummy__c/fields/ToReplaceCodentify__c.field-meta.xml
<CustomField>
    <fullName>ToReplaceCodentify__c</fullName>
    <label>ToReplaceCodentify</label>
    <length>20</length>
    <type>Text</type>
</CustomField>